<resources>
    <string name="app_name">PracticaActivityIntents</string>
    <string name="login">Login</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="username">Username</string>
    <string name="practica_de_activities_e_intents">Practica de Activities e Intents</string>
    <string name="datos">Datos</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
</resources>